# mojang-uuid

./: Cargo.toml  Licence
src/: main.rs
